src/app/components/project-map/node-editors/configurator/configurator.component.scss
/**
 * GNS3 Configurator Component Styles
 * Using MD3 CSS variables
 */

table {
  width: 100%;
}

.form-field {
  width: 100%;
}

.configButton {
  width: 100%;
}

.select {
  width: 100%;
}

.default-content {
  max-height: 400px;
  overflow-y: scroll;
  scrollbar-color: var(--mat-sys-on-surface) var(--mat-sys-surface);
  scrollbar-width: thin;
}

.file-button {
  width: 18%;
}

.create-button {
  width: 100%;
}

.file-name-form-field {
  padding-left: 2%;
  width: 80%;
}

.nonvisible {
  display: none;
}

mat-radio-button {
  margin-right: 8px;
}

::-webkit-scrollbar {
  width: 0.5em;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

::-webkit-scrollbar-thumb {
  background-color: var(--mat-sys-on-surface);
}

.tags-field {
  width: 100%;
}

